--- a/index.html
+++ b/index.html
@@ -5,33 +5,36 @@
 <!--[if IE 9]>         <html lang="es-MX" class="no-js lt-ie10"> <![endif]-->
 	<head>
 		<meta charset="UTF-8">
-		<meta name="description" content="">
+		<!--<meta name="description" content="">
 		<meta name="keywords" content="">
-		<meta name="author" content="Medigraf">
+		<meta name="author" content="Medigraf">-->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>default</title>
+		<title></title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-		<link type="text/css" rel="stylesheet" href="css/bootstrap/bootstrap.css" />
-		<link type="text/css" rel="stylesheet" href="css/suzuki/main.css" />
-		<link type="text/css" rel="stylesheet" href="css/fontawesome/font-awesome.css" />
-		<!--<link type="text/css" rel="stylesheet" href="css/webfont/suzuki-webfontkit/stylesheet.css" />-->
-		<link type="text/css" rel="stylesheet" href="css/sections/home.css" />
-        <link type="text/css" rel="stylesheet" href="css/sections/models-home.css" />
+		<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400,700,900">
+		<link type="text/css" rel="stylesheet" href="css/import.css" />
 		<!--[if IE]>
 	    <link type="text/css" rel="stylesheet" href="/css/suzuki/iefix.css" />
 	    <![endif]-->
 	    <!--[if lt IE 9]>
 	    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	    <![endif]-->
-	    <!--<script src="lib/modernizr/modernizr-2.8.3.js"></script>-->
 	</head>
 	<body>
-
-
+		<!-- Begin: Header -->
+        <!-- End: Header -->
+        <!-- Begin: Content -->
+        <!-- End: Content -->
+        <!-- Begin: Footer -->
+        <!-- End: Footer -->
+		<script src="http://maps.google.com/maps/api/js?libraries=places,geometry&amp;sensor=true&amp;_nc=20140313A"></script>
         <script src="lib/jquery/jquery-1.10.2.js"></script>
         <script src="lib/bootstrap/bootstrap.js"></script>
+        <script src="lib/modernizr/modernizr-2.8.3.js"></script>
         <script src="lib/handlebars.runtime.min.js"></script>
+        <script src='templates/templates.js'></script>
 
+        <script src='js/core.js'></script>
 
 		<script src="lib/faviconTest.js"></script>
 		<script src="lib/favicon.js"></script>
